--- a/iteracion2-master/iteracion2-master/WebContent/WEB-INF/ConnectionData/conexion.properties
+++ b/iteracion2-master/iteracion2-master/WebContent/WEB-INF/ConnectionData/conexion.properties
@@ -1,4 +1,4 @@
-url= jdbc:oracle:thin:@fn3.oracle.virtual.uniandes.edu.co\:1521\:prod
-usuario= ISIS2304B261620
-clave= FcpnnhSw26sZ
+url= jdbc:oracle:thin:localhost\:1521\:xe
+usuario= SYSTEM
+clave= X3r0Z3nn1n
 driver= oracle.jdbc.driver.OracleDriver
